force-app/main/default/objects/Application__c/fields/Previous_Employer_Street_Number__c.field-meta.xml
<CustomField>
    <fullName>Previous_Employer_Street_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Previous Employer Street Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>