force-app/main/default/objects/Application__c/fields/Previous_Gross_Annual_Income__c.field-meta.xml
<CustomField>
    <fullName>Previous_Gross_Annual_Income__c</fullName>
    <description>Previous Gross Annual Income</description>
    <inlineHelpText>Previous Gross Annual Income</inlineHelpText>
    <label>Previous Gross Annual Income</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>