force-app/main/default/objects/Application__c/fields/Primary_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Primary_Phone_Number__c</fullName>
    <inlineHelpText>Primary Phone Number</inlineHelpText>
    <label>Primary Phone Number</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Home Phone</fullName>
            </value>
            <value>
                <fullName>Mobile Phone</fullName>
            </value>
            <value>
                <fullName>Work Phone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>