force-app/main/default/objects/Application__c/fields/Privacy_Statement_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Privacy_Statement_Accepted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>checkbox to denote Privacy statement is accepted by user</description>
    <inlineHelpText>checkbox to denote Privacy statement is accepted by user</inlineHelpText>
    <label>Privacy Statement Accepted</label>
    <type>Checkbox</type>
</CustomField>