force-app/main/default/objects/Application__c/fields/Privacy_Statement_Accepted_Date__c.field-meta.xml
<CustomField>
    <fullName>Privacy_Statement_Accepted_Date__c</fullName>
    <description>date time to denote when Privacy statement is accepted by user</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>date time to denote when Privacy statement is accepted by user</inlineHelpText>
    <label>Privacy Statement Accepted Date</label>
    <type>DateTime</type>
</CustomField>