force-app/main/default/objects/Application__c/fields/Program_Id__c.field-meta.xml
<CustomField>
    <fullName>Program_Id__c</fullName>
    <description>Program Id</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Program Id</inlineHelpText>
    <label>Program Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>