force-app/main/default/objects/Application__c/fields/Program_Product_Id__c.field-meta.xml
<CustomField>
    <fullName>Program_Product_Id__c</fullName>
    <description>Program Product Id</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Program Product Id</inlineHelpText>
    <label>Program Product Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>