force-app/main/default/objects/Application__c/fields/Program_Product_Tier_Name__c.field-meta.xml
<CustomField>
    <fullName>Program_Product_Tier_Name__c</fullName>
    <description>Program Product Tier Name</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Program Product Tier Name</inlineHelpText>
    <label>Program Product Tier Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>