force-app/main/default/objects/Application__c/fields/Redecide_Request__c.field-meta.xml
<CustomField>
    <fullName>Redecide_Request__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Redecide Request</label>
    <length>125000</length>
    <type>LongTextArea</type>
</CustomField>