force-app/main/default/objects/Application__c/fields/Redecide_Response__c.field-meta.xml
<CustomField>
    <fullName>Redecide_Response__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Redecide Response</label>
    <length>125000</length>
    <type>LongTextArea</type>
</CustomField>