force-app/main/default/objects/Application__c/fields/Referral_URL__c.field-meta.xml
<CustomField>
    <fullName>Referral_URL__c</fullName>
    <description>Referral URL</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Referral URL</inlineHelpText>
    <label>Referral URL</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>