force-app/main/default/objects/Application__c/fields/Sales_Channel_Name__c.field-meta.xml
<CustomField>
    <fullName>Sales_Channel_Name__c</fullName>
    <description>Sales Channel Name</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Sales Channel Name</inlineHelpText>
    <label>Sales Channel Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>