force-app/main/default/objects/Application__c/fields/Scorecard_Program__c.field-meta.xml
<CustomField>
    <fullName>Scorecard_Program__c</fullName>
    <description>Scorecard Program</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Scorecard Program</inlineHelpText>
    <label>Scorecard Program</label>
    <length>30</length>
    <type>Text</type>
</CustomField>