force-app/main/default/objects/Application__c/fields/Script__c.field-meta.xml
<CustomField>
    <fullName>Script__c</fullName>
    <formula>CASE(Loan_Type__c, 
&quot;Affirm Financial MasterCard&quot;, 
CASE(PcoD_Bankruptcy_State__c, 
&quot;BKCP Not Discharged&quot;, HYPERLINK(&quot;https://c.na55.content.force.com/servlet/servlet.FileDownload?file=015j00000026ZPn&quot;,&quot;Script 2&quot;), 
HYPERLINK(&quot;https://c.na55.content.force.com/servlet/servlet.FileDownload?file=015j00000026ZPi&quot;,&quot;Script 1&quot;)), 

&quot;Affirm Financial Term Loan&quot;, 
CASE(Loan_Process_Type__c, 
&quot;Traditional&quot;, 
CASE(Permanent_Address_Province__c, 
&quot;MB&quot;, HYPERLINK(&quot;https://c.na55.content.force.com/apex/ShowLoanTeleScript?applName=&quot; &amp; Name,&quot;Manitoba specific Loan Telescript&quot;), 
HYPERLINK(&quot;https://c.na55.content.force.com/apex/ShowLoanTeleScript?applName=&quot; &amp; Name ,&quot;Generic Loan Telescript&quot;)), 
CASE(PcoD_Bankruptcy_State__c, 
&quot;BKCP Not Discharged&quot;, HYPERLINK(&quot;https://c.na55.content.force.com/servlet/servlet.FileDownload?file=015j00000026ZPs&quot;,&quot;Script 3&quot;), 
&quot;NA&quot;)), 
&quot;NA&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Script</label>
    <type>Text</type>
</CustomField>