force-app/main/default/objects/Application__c/fields/Source_Lender_ID__c.field-meta.xml
<CustomField>
    <fullName>Source_Lender_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Source Lender ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>