force-app/main/default/objects/Application__c/fields/Tax_Identification_Number__c.field-meta.xml
<CustomField>
    <fullName>Tax_Identification_Number__c</fullName>
    <description>Provide your tax identification number(s) for such other jurisdiction(s)</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Provide your tax identification number(s) for such other jurisdiction(s)</inlineHelpText>
    <label>Tax Identification Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>