force-app/main/default/objects/Application__c/fields/Tax_Obligation_in_other_Countries__c.field-meta.xml
<CustomField>
    <fullName>Tax_Obligation_in_other_Countries__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Do you have tax obligations in any country other than Canada?</description>
    <inlineHelpText>Do you have tax obligations in any country other than Canada</inlineHelpText>
    <label>Tax Obligation in other Countries</label>
    <type>Checkbox</type>
</CustomField>