force-app/main/default/objects/Application__c/fields/TCI_Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>TCI_Creation_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>TCI Creation Date</label>
    <type>DateTime</type>
</CustomField>