force-app/main/default/objects/Application__c/fields/Total_Credit_Worthiness__c.field-meta.xml
<CustomField>
    <fullName>Total_Credit_Worthiness__c</fullName>
    <inlineHelpText>Total credit worthiness returned from PowerCurve</inlineHelpText>
    <label>Total Credit Worthiness</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>