force-app/main/default/objects/Application__c/fields/Total_Credit_Worthiness_Greater_than_Cre__c.field-meta.xml
<CustomField>
    <fullName>Total_Credit_Worthiness_Greater_than_Cre__c</fullName>
    <formula>IF(Max_Credit_Card_Allowed_Amount__c &lt; Total_Credit_Worthiness__c, True, False)</formula>
    <inlineHelpText>Checked if Total Credit Worthiness is greater than the Max Credit Card Allowed Amount.</inlineHelpText>
    <label>Credit Worthiness Greater than Card</label>
    <type>Checkbox</type>
</CustomField>