force-app/main/default/objects/Application__c/fields/Trustee_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Trustee_Company_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Trustee Company Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>