force-app/main/default/objects/Application__c/fields/Trustee_Referral_Code__c.field-meta.xml
<CustomField>
    <fullName>Trustee_Referral_Code__c</fullName>
    <description>Trustee Referral Code passed to the iframe URL</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Trustee Referral Code passed to the iframe URL</inlineHelpText>
    <label>Trustee Referral Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>