force-app/main/default/objects/Application__c/fields/Unique_ID_AML__c.field-meta.xml
<CustomField>
    <fullName>Unique_ID_AML__c</fullName>
    <description>Unique ID value from the AML response</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Unique ID value from the AML response</inlineHelpText>
    <label>Unique ID AML</label>
    <length>30</length>
    <type>Text</type>
</CustomField>