force-app/main/default/objects/Application__c/fields/Verification_Auth_Token__c.field-meta.xml
<CustomField>
    <fullName>Verification_Auth_Token__c</fullName>
    <description>Verification Auth Token</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Verification Auth Token</inlineHelpText>
    <label>Verification Auth Token</label>
    <length>100</length>
    <type>Text</type>
</CustomField>