force-app/main/default/objects/Application__c/fields/Verification_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Verification_Completion_Date__c</fullName>
    <description>Verification Completion Date</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Verification Completion Date</inlineHelpText>
    <label>Verification Completion Date</label>
    <type>DateTime</type>
</CustomField>