force-app/main/default/objects/Application__c/fields/Verification_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Verification_Expiration_Date__c</fullName>
    <description>Verification Expiration Date</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Verification Expiration Date</inlineHelpText>
    <label>Verification Expiration Date</label>
    <type>DateTime</type>
</CustomField>