force-app/main/default/objects/Application__c/fields/Verification_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Verification_Sent_Date__c</fullName>
    <description>Verification Sent Date</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Verification Sent Date</inlineHelpText>
    <label>Verification Sent Date</label>
    <type>DateTime</type>
</CustomField>