force-app/main/default/objects/Application__c/fields/Verification_Status__c.field-meta.xml
<CustomField>
    <fullName>Verification_Status__c</fullName>
    <description>Verification Status</description>
    <inlineHelpText>Verification Status</inlineHelpText>
    <label>Verification Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email Sent – Analyst</fullName>
            </value>
            <value>
                <fullName>Email Sent – System</fullName>
            </value>
            <value>
                <fullName>Verified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>