force-app/main/default/objects/Application__c/fields/Webservice_Request__c.field-meta.xml
<CustomField>
    <fullName>Webservice_Request__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Webservice Request</inlineHelpText>
    <label>Webservice Request</label>
    <length>125000</length>
    <type>LongTextArea</type>
</CustomField>