force-app/main/default/objects/Application__c/fields/Webservice_Response__c.field-meta.xml
<CustomField>
    <fullName>Webservice_Response__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Webservice Response</inlineHelpText>
    <label>Webservice Response</label>
    <length>125000</length>
    <type>LongTextArea</type>
</CustomField>