force-app/main/default/objects/Application__c/fields/Work_Phone__c.field-meta.xml
<CustomField>
    <fullName>Work_Phone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Work Phone</label>
    <type>Phone</type>
</CustomField>