force-app/main/default/objects/Application__c/recordTypes/Affirm_Financial_MasterCard.recordType-meta.xml
<RecordType>
    <fullName>Affirm_Financial_MasterCard</fullName>
    <active>true</active>
    <description>For old MasterCard applications generated for Affirm</description>
    <label>Affirm Financial MasterCard</label>
</RecordType>