force-app/main/default/objects/Application__c/recordTypes/Affirm_Financial_Term_Loan.recordType-meta.xml
<RecordType>
    <fullName>Affirm_Financial_Term_Loan</fullName>
    <active>true</active>
    <description>For old term loan applications generated for Affirm</description>
    <label>Affirm Financial Term Loan</label>
</RecordType>