force-app/main/default/objects/Application__c/recordTypes/Fidem_Finance_MasterCard.recordType-meta.xml
<RecordType>
    <fullName>Fidem_Finance_MasterCard</fullName>
    <active>true</active>
    <description>Credit Card application for Fidem Finance</description>
    <label>Fidem Finance MasterCard</label>
</RecordType>