force-app/main/default/objects/Application__c/validationRules/Application_Name_not_editable.validationRule-meta.xml
<ValidationRule>
    <fullName>Application_Name_not_editable</fullName>
    <active>false</active>
    <errorConditionFormula>AND( 
ISCHANGED(Name), 
CONTAINS(PRIORVALUE(Name), &quot;AFI&quot;),
NOT($Profile.Name = &quot;System Administrator&quot;))</errorConditionFormula>
    <errorDisplayField>Accounts_On_File__c</errorDisplayField>
    <errorMessage>You cannot change the Application Name</errorMessage>
</ValidationRule>