force-app/main/default/objects/Application__c/validationRules/Change_not_allowed_CSR_Reviewed.validationRule-meta.xml
<ValidationRule>
    <fullName>Change_not_allowed_CSR_Reviewed</fullName>
    <active>true</active>
    <description>CSR reviewed check box can be checked only once. Once checked, it can not be unchecked</description>
    <errorConditionFormula>ISCHANGED( CSR_Reviewed__c ) &amp;&amp; PRIORVALUE(CSR_Reviewed__c) = True</errorConditionFormula>
    <errorMessage>Once CSR reviewed is checked, it cannot be unchecked</errorMessage>
</ValidationRule>