force-app/main/default/objects/Application__c/validationRules/CSR_Reviewed_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>CSR_Reviewed_validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISCHANGED(CSR_Reviewed__c ),
NOT(OR(
ISPICKVAL(Application_Status__c, &quot;System Approved&quot;),
ISPICKVAL(Application_Status__c, &quot;Analyst Approved&quot;)
)),
NOT(ISPICKVAL(Verification_Status__c , &quot;Verified&quot;))
)</errorConditionFormula>
    <errorMessage>CSR review cannot be completed if application is not approved and verification is not completed</errorMessage>
</ValidationRule>