force-app/main/default/objects/Application__c/validationRules/No_approved_application_status_change.validationRule-meta.xml
<ValidationRule>
    <fullName>No_approved_application_status_change</fullName>
    <active>false</active>
    <description>Do not allow application status change after it is approved</description>
    <errorConditionFormula>AND( ISCHANGED(Application_Status__c ) ,
OR( ISPICKVAL( PRIORVALUE( Application_Status__c ) , &quot;System Approved&quot;) ,
ISPICKVAL( PRIORVALUE( Application_Status__c ) , &quot;Analyst Approved&quot;)
) ,
NOT(ISPICKVAL( Application_Status__c, &quot;Completed - Credit Card&quot;))
)</errorConditionFormula>
    <errorMessage>Application Status cannot be changed manually from System Approved/ Analyst Approved</errorMessage>
</ValidationRule>