force-app/main/default/objects/Application__c/validationRules/No_completed_status_change.validationRule-meta.xml
<ValidationRule>
    <fullName>No_completed_status_change</fullName>
    <active>true</active>
    <description>Application status cannot be changed manually if it is Completed - Credit Card</description>
    <errorConditionFormula>AND( ISCHANGED(Application_Status__c ) ,
ISPICKVAL( PRIORVALUE( Application_Status__c ) , &quot;Completed - Credit Card&quot;),
NOT(ISPICKVAL( Application_Status__c, &quot;Archived&quot;))
)</errorConditionFormula>
    <errorMessage>Application Status cannot be changed manually from Completed - Credit Card</errorMessage>
</ValidationRule>