force-app/main/default/objects/Application__c/validationRules/Uneditable_Archived_Application.validationRule-meta.xml
<ValidationRule>
    <fullName>Uneditable_Archived_Application</fullName>
    <active>false</active>
    <errorConditionFormula>ISPICKVAL(PRIORVALUE(Application_Status__c), &quot;Archived&quot;)</errorConditionFormula>
    <errorMessage>Once application is archived, it cannot be edited</errorMessage>
</ValidationRule>