force-app/main/default/objects/Application__c/validationRules/Uneditable_Declined_Application.validationRule-meta.xml
<ValidationRule>
    <fullName>Uneditable_Declined_Application</fullName>
    <active>false</active>
    <errorConditionFormula>OR(
ISPICKVAL( PRIORVALUE(Application_Status__c ), &quot;Analyst Declined&quot;),
ISPICKVAL(PRIORVALUE(Application_Status__c ) , &quot;System Declined&quot;)
)</errorConditionFormula>
    <errorMessage>Once Application is declined, it cannot be edited</errorMessage>
</ValidationRule>