force-app/main/default/objects/Application__c/listViews/Applications_not_processed_by_TCI.listView-meta.xml
<ListView>
    <fullName>Applications_not_processed_by_TCI</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Decision_Timestamp__c</columns>
    <columns>TCI_Creation_Date__c</columns>
    <columns>Decision__c</columns>
    <columns>Application_Status__c</columns>
    <columns>Loan_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Decision__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
    <filters>
        <field>Application_Status__c</field>
        <operation>equals</operation>
        <value>Completed - Credit Card</value>
    </filters>
    <filters>
        <field>TCI_Creation_Date__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Loan_Type__c</field>
        <operation>equals</operation>
        <value>Affirm Financial MasterCard</value>
    </filters>
    <label>Applications not processed by TCI</label>
</ListView>