force-app/main/default/objects/Application__c/listViews/Applications_processed_by_TCI_Today.listView-meta.xml
<ListView>
    <fullName>Applications_processed_by_TCI_Today</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Decision_Timestamp__c</columns>
    <columns>TCI_Creation_Date__c</columns>
    <columns>Decision__c</columns>
    <columns>Application_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TCI_Creation_Date__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Applications processed by TCI Today</label>
</ListView>