force-app/main/default/objects/Application__c/listViews/Archived_Completed.listView-meta.xml
<ListView>
    <fullName>Archived_Completed</fullName>
    <booleanFilter>1 AND 2</booleanFilter>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Application_Date__c</columns>
    <columns>Requested_Credit_Limit__c</columns>
    <columns>Decision__c</columns>
    <columns>Application_Status__c</columns>
    <columns>Decision_Timestamp__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Decision__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
    <filters>
        <field>Application_Status__c</field>
        <operation>equals</operation>
        <value>Completed - CLI,Completed - Credit Card,Completed - Loan,Archived</value>
    </filters>
    <label>Archived (Completed)</label>
</ListView>