force-app/main/default/objects/Application__c/listViews/CC_Creation.listView-meta.xml
<ListView>
    <fullName>CC_Creation</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>Application_Date__c</columns>
    <columns>Requested_Credit_Limit__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Decision_Timestamp__c</columns>
    <columns>Decision__c</columns>
    <columns>Application_Status__c</columns>
    <columns>Interest_Rate_Code__c</columns>
    <columns>Acquisition_Code__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Decision__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <filters>
        <field>Application_Status__c</field>
        <operation>equals</operation>
        <value>CC Creation</value>
    </filters>
    <filters>
        <field>Application_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>9/1/2016 12:00 AM</value>
    </filters>
    <label>CC Creation</label>
</ListView>