force-app/main/default/objects/Application__c/listViews/Conditional.listView-meta.xml
<ListView>
    <fullName>Conditional</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>Application_Date__c</columns>
    <columns>Requested_Credit_Limit__c</columns>
    <columns>Province__c</columns>
    <columns>Decision__c</columns>
    <columns>Application_Status__c</columns>
    <columns>Decision_Timestamp__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Decision__c</field>
        <operation>equals</operation>
        <value>Referred,Approved</value>
    </filters>
    <filters>
        <field>Application_Status__c</field>
        <operation>equals</operation>
        <value>Conditional</value>
    </filters>
    <filters>
        <field>Loan_Type__c</field>
        <operation>equals</operation>
        <value>Affirm Financial MasterCard</value>
    </filters>
    <label>Conditional- CC Only</label>
</ListView>